[gd_scene load_steps=29 format=3 uid="uid://txylmowsjix5"]

[ext_resource type="Script" path="res://player.gd" id="1_62uao"]
[ext_resource type="PackedScene" uid="uid://gppu81t8ykst" path="res://crosshair.tscn" id="2_wvje8"]
[ext_resource type="PackedScene" uid="uid://smefu35yi3ph" path="res://weapon.tscn" id="3_8big8"]
[ext_resource type="Texture2D" uid="uid://w52ydfgbffeq" path="res://death_animation_player.png" id="3_kdh76"]
[ext_resource type="Texture2D" uid="uid://b7g8cwsdc1vqw" path="res://bubbles.png" id="3_po64j"]
[ext_resource type="Texture2D" uid="uid://chupaj5c2em7p" path="res://walk_right_player.png" id="5_ad1qb"]
[ext_resource type="Texture2D" uid="uid://dt3spvrvkv1eh" path="res://walk_left_player.png" id="6_6yr57"]

[sub_resource type="AtlasTexture" id="AtlasTexture_m1hp5"]
atlas = ExtResource("3_kdh76")
region = Rect2(8, 7, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_6fqc4"]
atlas = ExtResource("3_kdh76")
region = Rect2(54, 7, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_0k7mu"]
atlas = ExtResource("3_kdh76")
region = Rect2(102, 7, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_2aood"]
atlas = ExtResource("3_kdh76")
region = Rect2(8, 52, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ek1j"]
atlas = ExtResource("3_po64j")
region = Rect2(8, 10, 45, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_sp5r0"]
atlas = ExtResource("3_po64j")
region = Rect2(53, 10, 45, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_btduc"]
atlas = ExtResource("3_po64j")
region = Rect2(98, 10, 45, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_jbnt1"]
atlas = ExtResource("3_po64j")
region = Rect2(8, 55, 45, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_o0m3m"]
atlas = ExtResource("3_po64j")
region = Rect2(53, 55, 45, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_2cj1g"]
atlas = ExtResource("6_6yr57")
region = Rect2(5, 5, 48, 46)

[sub_resource type="AtlasTexture" id="AtlasTexture_vqowf"]
atlas = ExtResource("6_6yr57")
region = Rect2(53, 5, 48, 46)

[sub_resource type="AtlasTexture" id="AtlasTexture_5h56d"]
atlas = ExtResource("6_6yr57")
region = Rect2(101, 5, 48, 46)

[sub_resource type="AtlasTexture" id="AtlasTexture_h43q6"]
atlas = ExtResource("6_6yr57")
region = Rect2(5, 51, 48, 46)

[sub_resource type="AtlasTexture" id="AtlasTexture_nj7lx"]
atlas = ExtResource("5_ad1qb")
region = Rect2(5, 5, 48, 46)

[sub_resource type="AtlasTexture" id="AtlasTexture_f65fo"]
atlas = ExtResource("5_ad1qb")
region = Rect2(53, 5, 48, 46)

[sub_resource type="AtlasTexture" id="AtlasTexture_886iv"]
atlas = ExtResource("5_ad1qb")
region = Rect2(101, 5, 48, 46)

[sub_resource type="AtlasTexture" id="AtlasTexture_p3xth"]
atlas = ExtResource("5_ad1qb")
region = Rect2(5, 51, 48, 46)

[sub_resource type="SpriteFrames" id="SpriteFrames_uu36j"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_m1hp5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6fqc4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0k7mu")
}, {
"duration": 3.0,
"texture": SubResource("AtlasTexture_2aood")
}],
"loop": true,
"name": &"death",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ek1j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sp5r0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_btduc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jbnt1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o0m3m")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2cj1g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vqowf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5h56d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h43q6")
}],
"loop": true,
"name": &"walk_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nj7lx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f65fo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_886iv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p3xth")
}],
"loop": true,
"name": &"walk_right",
"speed": 5.0
}]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hfbku"]
bg_color = Color(1, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tv17k"]
bg_color = Color(0.0499457, 0.820884, 1, 1)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_gqjh4"]
radius = 19.0
height = 38.0

[node name="CharacterController2D" type="CharacterBody2D"]
disable_mode = 2
collision_mask = 4
motion_mode = 1
platform_floor_layers = 4294967285
platform_wall_layers = 1
script = ExtResource("1_62uao")
crossHairObj = ExtResource("2_wvje8")
weaponType = ExtResource("3_8big8")
metadata/_edit_group_ = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_uu36j")
animation = &"death"
frame_progress = 0.475145

[node name="HealthBar" type="ProgressBar" parent="."]
layout_direction = 2
offset_left = -22.0
offset_top = -39.0
offset_right = 22.0
offset_bottom = -29.0
theme_override_styles/fill = SubResource("StyleBoxFlat_hfbku")
step = 0.1
value = 100.0
show_percentage = false

[node name="ShieldBar" type="ProgressBar" parent="."]
layout_direction = 2
offset_left = -22.0
offset_top = -53.0
offset_right = 22.0
offset_bottom = -43.0
theme_override_styles/fill = SubResource("StyleBoxFlat_tv17k")
step = 0.1
value = 100.0
show_percentage = false

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-4, -4)
shape = SubResource("CapsuleShape2D_gqjh4")

[node name="deathTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="shieldTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="deathTimer" to="." method="_on_death_timer_timeout"]
